--- a/src/css/Layout.css
+++ b/src/css/Layout.css
@@ -7,7 +7,7 @@
 
 body{
     background-color: #ffffff;
-    font-family: "Poppins";
+    font-family: "Times New Roman";
     overflow-x: hidden;
 }
 
